<resources>
    <string name="app_name" translatable="false">CnouLeg</string>
    <string name="author_string">By %1$s</string>
    <string name="section_gallery">Gallery</string>
    <string name="section_videos">Videos</string>
    <string name="section_documents">Documents</string>

    <string-array name="class_level_strings">
        <item>Elementary school</item>
        <item>Middle school</item>
        <item>High school</item>
        <item>University</item>
        <item>Other</item>
    </string-array>

    <string-array name="subject_strings">
        <item>Italian literature</item>
        <item>Italian grammar</item>
        <item>Math</item>
        <item>ICT</item>
        <item>English grammar</item>
        <item>English literature</item>
        <item>History</item>
        <item>Geography</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Science</item>
        <item>Biology</item>
        <item>Economy</item>
        <item>Law</item>
        <item>Arts</item>
        <item>Music</item>
        <item>Philosophy</item>
        <item>P. E.</item>
        <item>Other</item>
    </string-array>
    <string name="activity_read">Read a note</string>
    <string name="settings_connection_section">Connection settings</string>
    <string name="settings_connection_server">Server address and API URL</string>
    <string name="title_activity_settings">Settings</string>
    <string name="activity_gallery">Gallery</string>
    <string name="activity_video">Video</string>
    <string name="allow_storage_title">Documents download</string>
    <string name="allow_storage_desc">Every document you open in CnouLeg is stored in your Downloads folder. We need your permission to save files there.</string>
    <string name="section_documents_hint">Opened documents will be saved in the Downloads folder.</string>
    <string name="rate_note">Rate this note</string>
    <string name="rate_note_hint">Ratings will stay anonymous.</string>
    <string name="section_comments">Comments</string>
    <string name="comment_hint">Add a comment…</string>
    <string name="replying_to">Replying to %1$s</string>
    <string name="posted_on">Posted on %1$s</string>
    <string name="comment_reply">Reply</string>
    <string name="comment_load_replies">Load replies</string>
    <string name="section_search">Notes</string>
    <string name="section_profile">Profile</string>
    <string name="profile_teacher">Teacher</string>
    <string name="profile_teaches">Teaches %1$s at %2$s</string>
    <string name="profile_teaches_alt">Teaches at %1$s</string>
    <string name="profile_student">Student</string>
    <string name="profile_studies">Studies %1$s at %2$s</string>
    <string name="profile_studies_alt">Studies at %1$s</string>
    <string name="profile_birthday">Born on %1$s</string>
    <string name="profile_bio">Bio</string>
    <string name="profile_info">Info</string>
    <string name="actvity_registration">Sign up</string>
    <string name="activity_login">Login</string>
    <string name="login_title">Welcome back!</string>
    <string name="login_subtitle">Enter your login info to continue.</string>
    <string name="form_next">Next</string>
    <string name="form_end">End</string>
    <string name="account_guest_name">Guest</string>
    <string name="account_not_logged_in">You aren\'t logged in yet</string>
    <string name="account_login_pros_0">Log in to:</string>
    <string name="account_login_pros_1">Share notes</string>
    <string name="account_login_pros_2">Write comments</string>
    <string name="account_login_pros_3">Rate notes and comments</string>
    <string name="register_0_title">Let\'s start with the basics</string>
    <string name="register_0_subtitle">Email address, password, and a name that will be visible to others.</string>
    <string name="register_1_title">Something about you</string>
    <string name="register_1_subtitle">We won\'t tell anybody, we just wanted to put something here.</string>
    <string name="register_2_title">All done!</string>
    <string name="register_2_subtitle">You can add information about yourself and what you\'re studying in the Profile section.</string>
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>
    <string name="form_username">Username</string>
    <string name="form_birth_date">Birth date</string>
    <string name="form_gender">Gender</string>
    <string name="error_email_empty">Enter an email address.</string>
    <string name="error_email_invalid">Enter a valid email address.</string>
    <string name="error_username_empty">Enter a username.</string>
    <string name="error_password_empty">Enter a password.</string>
    <string name="error_email_already_exists">This email address has already been registered.</string>
    <string name="error_birthdate_empty">Enter your birth date.</string>
    <string name="error_gender_empty">Enter your gender.</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to specify</item>
    </string-array>

    <string name="settings_profile_section">Profile</string>
    <string name="settings_profile_logout_title">Logout</string>
    <string name="settings_profile_logout_desc">Delete stored JWT and log out from your account.</string>
    <string name="bio_not_set">No description set</string>
    <string name="activity_edit_profile_details">Profile</string>
    <string name="action_edit_profile_details">Edit profile</string>
    <string name="menu_choose_image">Choose image</string>
    <string name="menu_remove_image">Remove image</string>

    <string-array name="roles">
        <item>Student</item>
        <item>Teacher</item>
        <item>Other</item>
    </string-array>
    <string name="activity_note_editor">Write a note</string>
    <string name="tooltip_header">Insert header</string>
    <string name="tooltip_bold">Bold</string>
    <string name="tooltip_italic">Italic</string>
    <string name="tooltip_strikethrough">Strikethrough</string>
    <string name="tooltip_unordered_list">Bulleted list</string>
    <string name="tooltip_ordered_list">Numbered list</string>
    <string name="tooltip_image">Insert image</string>
    <string name="tooltip_link">Insert link</string>
    <string name="tooltip_quotation">Quotation block</string>
    <string name="tooltip_monospace">Monospace/Inline code</string>
    <string name="tooltip_code_block">Code block</string>
    <string name="tooltip_table">Insert table</string>
    <string name="tooltip_horizontal_rule">Insert horizontal rule</string>
    <string name="tooltip_latex">Insert LaTeX (equation) block</string>

    <string-array name="programming_languages" translatable="false">
        <item>Plaintext</item>
        <item>Bash</item>
        <item>C</item>
        <item>C++</item>
        <item>C#</item>
        <item>CSS</item>
        <item>Dart</item>
        <item>Go</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>JSON</item>
        <item>Kotlin</item>
        <item>Markup (HTML, XML, ...)</item>
        <item>Python</item>
        <item>RegEx</item>
        <item>SQL</item>
        <item>Swift</item>
    </string-array>
    <string name="table_header">Column %1$d</string>
    <string name="table_content">Content</string>
    <string name="action_add">Add</string>
    <string name="format_title_1">Header 1</string>
    <string name="format_title_2">Header 2</string>
    <string name="format_title_3">Header 3</string>
    <string name="format_title_4">Header 4</string>
    <string name="format_title_5">Header 5</string>
    <string name="format_title_6">Header 6</string>
    <string name="action_already_have_an_account">Already have one?</string>
    <string name="dialog_url">URL</string>
    <string name="dialog_showed_text">Displayed text</string>
    <string name="action_dont_have_an_account">Don\'t have an account?</string>
    <string name="dialog_language">Language</string>
    <string name="dialog_language_helper">Choose a language for syntax highlighting. If the language is not on the list, choose Plaintext.</string>
    <string name="dialog_image_link">Link to the image</string>
    <string name="dialog_image_alt_text">Alt text</string>
    <string name="dialog_image_alt_text_helper">Text that will be displayed if the image can\'t be loaded.</string>
    <string name="label_rows">Rows</string>
    <string name="label_columns">Columns</string>
    <string name="error_generic_server">Can\'t reach server.</string>
    <string name="error_authentication_error">Authentication error.</string>
    <string name="error_no_user_found_with_email">No user with this email found.</string>
    <string name="error_wrong_password">Incorrect password.</string>
    <string name="action_insert">Insert</string>
    <string name="action_insert_image">Insert image</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_insert_link">Insert link</string>
    <string name="action_insert_code_block">Insert code snippet</string>
    <string name="action_insert_table">Insert table</string>
    <string name="error_unrecognized_token">Server didn\'t recognize the JWT.</string>
    <string name="logout_successful">Logged out</string>
    <string name="form_role">Role</string>
    <string name="form_school">School</string>
    <string name="form_study_field">Field of study</string>
    <string name="form_save">Save</string>
    <string name="editor_title">Title</string>
    <string name="editor_description">Description</string>
    <string name="editor_class_level">Class</string>
    <string name="editor_subject">Subject</string>
    <string name="editor_tags">Tags (max. 5)</string>
    <string name="editor_markdown">Markdown</string>
    <string name="editor_preview">Preview</string>
    <string name="editor_max_10_elements">Max. 10 elements</string>
    <string name="editor_max_5_elements">Max. 5 elements</string>
    <string name="hint_log_in">Log in to leave a comment.</string>
    <string name="action_editor_done">Hide format toolbar</string>
    <string name="error_empty_title">Enter a title.</string>
    <string name="error_empty_desc">Enter a description.</string>
    <string name="error_empty_subject">Select a subject.</string>
    <string name="error_empty_class_level">Select a class level.</string>
    <string name="error_empty_markdown">Enter a body.</string>
    <string name="error_markdown_too_short">Write some more, will you?</string>
    <string name="label_login_to_rate">Log in to leave a rating.</string>
    <string name="label_must_be_logged_in">Log in to do that.</string>
    <string name="profile_notes">Shared notes</string>
    <string name="hint_search_bar">Search</string>
    <string name="label_min_rating">Minimum rating</string>

    <plurals name="stars">
        <item quantity="one">%d star</item>
        <item quantity="other">%d stars</item>
    </plurals>
    <string name="ratings_any">Any</string>
    <string name="dialog_search_filters">Search filters</string>
    <string name="dialog_apply">Apply</string>
    <string name="menu_edit_note">Edit note</string>
    <string name="menu_delete_note">Delete note</string>
    <string name="edit_contents_info">Attached contents can\'t be edited once a note is published.</string>

</resources>